<resources>
    <string name="app_name">set-wifi-proxy</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Set Wifi Proxy</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="apply">Apply</string>
    <string name="erase">Erase</string>
    <string name="previous">Previous</string>

    <string name="input_proxy_ip">Proxy ip</string>
    <string name="input_proxy_port">Proxy port</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s
    </string>
    <string name="host_ip">192.168.2.100</string>
    <string name="port">1080</string>
</resources>
