<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FirstFragment">

    <Button
            android:id="@+id/button_first2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/erase"
            app:layout_constraintTop_toBottomOf="@id/textview_first"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.681"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/port"
            android:ems="10"
            android:id="@+id/editTextTextPersonName2"
            app:layout_constraintStart_toEndOf="@+id/textview_first2"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="328dp"/>
    <TextView
            android:id="@+id/textview_first2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_proxy_port"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_first"
            app:layout_constraintHorizontal_bias="0.101"
            app:layout_constraintVertical_bias="0.74"/>
    <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_proxy_ip"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_first"
            app:layout_constraintHorizontal_bias="0.138"/>
    <Button
            android:id="@+id/button_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            app:layout_constraintTop_toBottomOf="@id/textview_first"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/host_ip"
            android:ems="10"
            android:id="@+id/editTextTextPersonName"
            app:layout_constraintStart_toEndOf="@+id/textview_first"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="221dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
